Justert likt som produktside

--- a/src/pages/produkt/produkt.njk
+++ b/src/pages/produkt/produkt.njk
@@ -9,8 +9,8 @@ order: 4
 {%- from "macros/microcard.njk" import microcard -%}
 
 {%- block content -%}
-  <main class="py-8 text-lg md:py-12 px-clamp-gap">
-    <div class="relative max-w-screen-lg mx-auto grid sm:grid-cols-[6rem_auto] gap-x-8 items-start mb-12">
+  <main class="grid py-8 text-lg md:py-12 grid-cols-layout">
+    <div class="relative col-wide grid sm:grid-cols-[5rem_auto] gap-x-8 items-start mb-12">
       {{ '/src/_includes/svg/pictograms/utvidet-barnetrygd.svg' | svgContents('w-[calc(8vw+3rem)] h-auto max-w-24 md:-ml-2 text-green-800 absolute right-0 top-3 sm:static') | safe }}
 
       <div class="sm:col-start-2 sm:row-start-1">
@@ -22,7 +22,7 @@ order: 4
       </div>
 
       {# Intro #}
-      <div class="sm:col-start-2 grid md:grid-cols-[2.1fr_0.9fr] gap-x-16 items-start gap-4 mt-8">
+      <div class="sm:col-start-2 grid md:grid-cols-[2fr_1fr] gap-x-16 items-start gap-4 mt-8">
         <div class="markdown">
           <p>Du kan få utvidet barnetrygd når du bor alene med barn under 18 år. Dette er barnetrygd for et barn mer enn du faktisk bor sammen med.</p>
 
