--- a/src/pages/soknad-og-skjema/soknad-og-skjema.njk
+++ b/src/pages/soknad-og-skjema/soknad-og-skjema.njk
@@ -130,6 +130,7 @@ bodyClass: 'bg-white'
     .navds-stepper {
       --navds-global-color-gray-600: rgba(112, 112, 112, 1);
       --navds-global-color-gray-400: rgba(176, 176, 176, 1);
+      --navds-global-color-gray-300: rgba(207, 207, 207, 1);
       --navds-global-color-deepblue-500: rgba(0, 91, 130, 1);
       --navds-global-color-blue-800: rgba(0, 52, 125, 1);
       --navds-global-color-blue-500: rgba(0, 103, 197, 1);
@@ -156,7 +157,7 @@ bodyClass: 'bg-white'
       gap: 0.25rem 0.5rem;
     }
     .navds-stepper__line {
-      background-color: var(--navds-global-color-blue-500);
+      background-color: var(--navds-global-color-gray-300);
       width: 1.5px;
       height: 100%;
       min-height: 0.5rem;
@@ -186,7 +187,7 @@ bodyClass: 'bg-white'
       place-items: center;
       width: var(--navds-stepper-marker-size);
       height: var(--navds-stepper-marker-size);
-      border: 2px solid transparent;
+      {# box-shadow: 0 0 0 2px var(--navds-global-color-blue-50); #}
       background-color: var(--navds-global-color-blue-50);
       border-radius: 999px;
       line-height: 1;
