--- a/src/pages/soknad-og-skjema/dagpenger.njk
+++ b/src/pages/soknad-og-skjema/dagpenger.njk
@@ -9,20 +9,23 @@ order: 7
 {%- extends 'base-basic.njk' -%}
 
 {%- block content -%}
-  <main class="min-h-[70vh]">
-    <div class="grid grid-cols-layout">
-      <div class="relative pt-8 col-narrow lg:col-normal">
-        <div class="hidden float-right pb-8 ml-24 xs:block sm:pb-0 sm:-mb-8">
-          {{ '/src/_includes/svg/pictograms/soknad-og-skjema.svg' | svgContents('w-[12vw] h-auto overflow-hidden max-w-[6rem]') | safe }}
-        </div>
+  <main class="grid py-8 text-lg md:py-12 grid-cols-layout" x-data="{ stepperOpen: false }">
+    <div class="relative col-wide max-w-prose md:max-w-none mx-auto md:mx-0 grid md:grid-cols-[6rem_auto] gap-x-8 items-start mb-12">
+
+      {# Pictogram #}
+      {{ '/src/_includes/svg/pictograms/soknad-og-skjema.svg' | svgContents('w-full h-auto max-w-20 md:ml-2 text-green-800 absolute right-0 -top-2 md:relative hidden xs:block') | safe }}
+
+      {# Intro #}
+      <div class="md:col-start-2 md:row-start-1">
         <h1 class="text-3xl font-semibold leading-tight md:text-5xl md:leading-tight">{{ title | safe }}</h1>
-        <p class="mt-3 tracking-wider uppercase opacity-70">
+        <p class="mt-2 text-base tracking-wider uppercase opacity-70">
           {{ kicker | upper }}
           {{ '–' if form }}
           {{ form | safe }}
         </p>
       </div>
-      <div class="relative pb-8 col-narrow lg:col-normal">
+
+      <div class="md:col-start-2 md:grid md:grid-cols-[2.2fr_0.8fr] gap-x-16 items-start gap-4">
         <div class="mt-12 text-lg max-w-prose markup">
           <form x-data="{ applicationFormat: '' }">
             <fieldset>
@@ -64,7 +67,7 @@ order: 7
               </ul>
             </fieldset>
             <div class="mt-7">
-              <button class="inline-flex px-6 py-2.5 text-white bg-blue-500 fine:hover:bg-blue-600 rounded focus-visible:outline-none focus-visible:ring focus-visible:ring-blue-800 focus-visible:ring-offset-1 focus-visible:ring-offset-white" type="submit">Start søknad</button>
+              <a class="inline-flex px-6 py-2.5 text-white bg-blue-500 fine:hover:bg-blue-600 rounded focus-visible:outline-none focus-visible:ring focus-visible:ring-blue-800 focus-visible:ring-offset-1 focus-visible:ring-offset-white" href="/soknad-og-skjema/">Start søknad</a>
             </div>
           </form>
         </div>
